--- a/phase4/Makefile
+++ b/phase4/Makefile
@@ -8,12 +8,12 @@ AR = ar
 COBJS = phase4.o libuser4.o
 CSRCS = ${COBJS:.o=.c}
 
-#PHASE1LIB = patrickphase1
-#PHASE2LIB = patrickphase2
-#PHASE3LIB = patrickphase3
-PHASE1LIB = patrickphase1debug
-PHASE2LIB = patrickphase2debug
-PHASE3LIB = patrickphase3debug
+PHASE1LIB = patrickphase1
+PHASE2LIB = patrickphase2
+PHASE3LIB = patrickphase3
+#PHASE1LIB = patrickphase1debug
+#PHASE2LIB = patrickphase2debug
+#PHASE3LIB = patrickphase3debug
 HDRS = libuser.h phase1.h phase2.h phase3.h phase4.h
 
 INCLUDE = ${PREFIX}/include
