--- a/phase5/Makefile
+++ b/phase5/Makefile
@@ -17,7 +17,7 @@ PHASE4LIB = patrickphase4
 #PHASE3LIB = patrickphase3debug
 #PHASE4LIB = patrickphase4debug
 
-HDRS = vm.h
+HDRS = vm.h providedPrototypes.h
 
 INCLUDE = ${PREFIX}/include
 
